# trempiada

./: .env.example  .gitignore  .lintstagedrc.check.json  .prettierignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
.githooks/: pre-commit
.github/workflows/: deploy-liveness-pages.yml
docs/: index.html  privacy.html  whatsapp-bot-implementation-plan.md
infra/: .gitignore  Pulumi.yaml  README.md  package-lock.json  package.json  tsconfig.json
infra/src/: api.ts  bot-policy.ts  browser-role.ts  config.ts  dynamodb.ts  face-crop-codebuild.ts  face-crop-lambda.ts  index.ts  lambda.ts
infra/src/lambda/face-crop-fast/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.al2023  Dockerfile.lambda  README.md  buildspec.yml
infra/src/lambda/face-crop-fast/scripts/: build-lambda-zip.sh  deploy-codebuild-zip.sh  download-models.sh  run-test.sh
infra/src/lambda/face-crop-fast/src/: lib.rs
infra/tests/: bootstrap.test.mjs
scripts/: build_licenses_db.py  create_local_liveness_link.ts  csv_to_jsonl.py  setup-osrm.sh  test-face-crop.ts
src/: config.ts  index.ts  logger.ts
src/bot/: deps.ts  dev.ts  handlers.ts  session.ts  ui.ts
src/db/: dev-repository.ts  migrate.ts  repository.ts
src/services/: car-recognition.ts  geocoding.ts  license-lookup.ts  matching.ts  routing.ts  waze.ts
src/types/: index.ts
src/utils/: index.ts
tests/e2e/: car-recognition.test.ts
tests/helpers/: fetch-mock.ts  license-db.ts
tests/integration/: dev-repository.test.ts  matching.test.ts  profile-face.test.ts  repository.test.ts
tests/unit/: car-recognition.test.ts  dev.test.ts  geocoding.test.ts  (+11 more)
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+33 files in other folders)
